Remove examples from worker and update the swagger
